--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,26 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0" }
 serde_json = { version = "1.0" }
-ureq = { version = "2.5", features = ["json"] }
 
 aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
+
+# For compiling natively:
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+ureq = { version = "2.5", features = ["json"] }
+
+# For compiling to web:
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = "0.3"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+
+[dependencies.web-sys]
+version = "0.3.52"
+features = [
+  "Headers",
+  "Request",
+  "RequestInit",
+  "RequestMode",
+  "Response",
+  "Window",
+]
