--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aptos-client"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0" }
 serde_json = { version = "1.0" }
+hex = { version = "0.4.3" }
 
 aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
 
