--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,13 @@ edition = "2021"
 serde = { version = "1.0" }
 serde_json = { version = "1.0" }
 hex = { version = "0.4.3" }
+anyhow = {version = "1.0" }
 
-aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
+rand_core = "0.5.1"
+bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
+aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
+aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
+move-core-types = { git = "https://github.com/move-language/move", rev = "a6e1ffba1dab6b5d9f2804a91cd48e6b928e1b3b", features = ["address32"] }
 
 # For compiling natively:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -18,6 +23,7 @@ ureq = { version = "2.5", features = ["json"] }
 
 # For compiling to web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+serde-wasm-bindgen = "0.4"
 js-sys = "0.3"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
